diesel_compile_tests/tests/fail/derive/queryable_by_name_requires_table_name_or_sql_type_annotation.stderr
error: All fields of tuple structs must be annotated with `#[diesel(column_name)]`
  --> tests/fail/derive/queryable_by_name_requires_table_name_or_sql_type_annotation.rs:10:10
   |
10 | #[derive(QueryableByName)]
   |          ^^^^^^^^^^^^^^^
   |
   = note: this error originates in the derive macro `QueryableByName` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0433]: failed to resolve: use of undeclared crate or module `foos`
 --> tests/fail/derive/queryable_by_name_requires_table_name_or_sql_type_annotation.rs:5:8
  |
5 | struct Foo {
  |        ^^^ use of undeclared crate or module `foos`
